# svelte-rocket-example

./: README.md
client/svelte/app/: package-lock.json  package.json
client/svelte/app/src/routes/blog/: _posts.js
client/svelte/app/src/routes/blog/[slug]/: index.svelte  json.js
server/: Cargo.toml
server/src/: main.rs
