[package]
name = "server"
version = "0.1.0"
authors = ["brian"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "8d4d01106e2e10b08100805d40bfa19a7357e900"}
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "8d4d01106e2e10b08100805d40bfa19a7357e900" }
